Rename: 메인페이지 css 파일명 변경, images main 폴더 생성

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="icon" type="image/png" href="/images/favicon.png" />
+    <link rel="icon" type="image/png" href="/images/main/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>하나카드</title>
 
@@ -37,7 +37,7 @@
     <script src="js/jquery-1.12.3.js"></script>
     <script src="js/script.js"></script>
     <!-- css -->
-    <link rel="stylesheet" href="css/style.css" type="text/css" />
+    <link rel="stylesheet" href="css/main.css" type="text/css" />
     <link rel="stylesheet" href="css/modal.css" type="text/css" />
   </head>
   <body>
@@ -49,7 +49,7 @@
             <div class="inner">
               <div class="h_left">
                 <a href="#" class="logo">
-                  <img src="images/logo.png" alt="로고" />
+                  <img src="images/main/logo.png" alt="로고" />
                 </a>
                 <ul class="site">
                   <li class="pers">
