--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <div class="inner">
               <ul>
                 <li>
-                  <a href="javascript:void(0);">마이페이지</a>
+                  <a href="projectDoc.html">마이페이지</a>
                 </li>
                 <li>
                   <a href="javascript:void(0);">카드</a>
@@ -153,7 +153,7 @@
                 <a href="javascript:void(0)" class="keyword">
                   <span># 원큐페이</span>
                 </a>
-                <a href="javascript:void(0)" class="keyword">
+                <a href="projectDoc.html" class="keyword">
                   <span># 이용대금명세서</span>
                 </a>
                 <a href="javascript:void(0)" class="keyword">
@@ -214,7 +214,7 @@
                             <p class="li_title">이용내역</p>
                             <ul class="dep2">
                               <li>
-                                <a href="#">이용대금명세서</a>
+                                <a href="projectDoc.html">이용대금명세서</a>
                               </li>
                               <li>
                                 <a href="#">결제예정금액</a>
@@ -1193,7 +1193,7 @@
           <div class="border">
             <ul class="border_ul">
               <li>
-                <a href="javascript:void(0);" class="icon icon1">
+                <a href="projectDoc.html" class="icon icon1">
                   <p>이용대금명세서</p>
                 </a>
               </li>
