Feat: 최종기획안에 사이트 바로가기 링크 추가

--- a/projectDoc.html
+++ b/projectDoc.html
@@ -48,6 +48,12 @@
                   Visual Studio Code: HTML, CSS, JS(jQuery)
                 </span>
               </li>
+              <li>
+                <span>배포 주소 </span>
+                <a href="https://majestic-fox-411cb8.netlify.app/">
+                  리뉴얼 하나카드 바로가기</a
+                >
+              </li>
             </ul>
           </div>
           <div class="intro_right">
